k8s/account-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: account # Replica set manage the pods with this selector AND immutable
  template:
    metadata:
      labels:
        app: account #all 3 pods label
    spec:
      containers:
        - name: account
          image: account:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
