k8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth # Replica set manage the pods with this selector AND immutable
  template:
    metadata:
      labels:
        app: auth #all 3 pods label
    spec:
      containers:
        - name: auth
          image: auth:2.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
