k8s/auth-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: auth-pod
  labels:
    app: auth
spec:
  containers:
    - name: auth
      image: auth:1.0.0
      imagePullPolicy: Never #only use local image
      ports:
        - containerPort: 5000
      resources:
        requests:
          memory: "128Mi"
          cpu: "250m"
        limits:
          memory: "256Mi"
          cpu: "500m"
