k8s/bank-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bank
  template:
    metadata:
      labels:
        app: bank
    spec:
      containers:
        - name: bank
          image: bank:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
