k8s/profile-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: profile
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
        - name: profile
          image: profile:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
