k8s/account-service.yml
apiVersion: v1
kind: Service
metadata:
  name: account-service
spec:
  selector:
    app: account
  ports:
    - port: 3001
      targetPort: 3001
