k8s/bank-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bank-service
spec:
  selector:
    app: bank
  ports:
    - port: 4000
      targetPort: 4000
