k8s/customer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  selector:
    app: customer #matches pod label
  ports:
    - port: 3000
      targetPort: 3000
