k8s/profile-service.yml
apiVersion: v1
kind: Service
metadata:
  name: profile-service
  namespace: sm-banking
spec:
  selector:
    app: profile #matches pod label
  ports:
    - port: 3000
      targetPort: 3000
